歌词库实现。
Signed-off-by: 星宇 鞠 <1326603527@qq.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,7 @@
     <color name="surface_variant">#FFE0E0E0</color>
     <color name="primary">#FF2196F3</color>
     <color name="error">#FFB00020</color>
+    <color name="search_background">#F5F5F5</color>
+    <color name="search_stroke">#E0E0E0</color>
+    <color name="background_color">#F8F9FA</color>
 </resources>
